Closed
Bug 1152395
Opened 6 years ago
Closed 6 years ago
crash in mozilla::ipc::MessageChannel::Call(IPC::Message*, IPC::Message*)
Categories
(Core :: Plug-ins, defect)
Core
Plug-ins
Tracking
()
RESOLVED
FIXED
mozilla40
People
(Reporter: aklotz, Assigned: aklotz)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file, 1 obsolete file)
4.95 KB,
patch
|
aklotz
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-56a8ec4c-75a3-4a6f-8747-7508b2150405. ============================================================= I think what we're seeing here is an NP_Shutdown call coming in while async NP_Initialize is still running.
Assignee | ||
Comment 1•6 years ago
|
||
Just a blatant omission on my part: NP_Shutdown would go ahead and kill everything while NP_Initialize was still executing asynchronously. This code detects that condition, sets a flag, and then we'll check for that when processing the NP_Initialize result.
Attachment #8589769 -
Flags: review?(jmathies)
Assignee | ||
Updated•6 years ago
|
status-firefox38:
--- → disabled
status-firefox39:
--- → affected
![]() |
||
Comment 2•6 years ago
|
||
Comment on attachment 8589769 [details] [diff] [review] Make NP_Shutdown async init aware Review of attachment 8589769 [details] [diff] [review]: ----------------------------------------------------------------- ::: dom/plugins/ipc/PluginModuleParent.cpp @@ +2250,5 @@ > void > PluginModuleParent::InitAsyncSurrogates() > { > + if (MaybeRunDeferredShutdown()) { > + mSurrogateInstances.Clear(); I'm not sure why you cleared this, maybe add a comment?
Attachment #8589769 -
Flags: review?(jmathies) → review+
Assignee | ||
Comment 3•6 years ago
|
||
Added comment. Carrying forward r+.
Attachment #8589769 -
Attachment is obsolete: true
Attachment #8589787 -
Flags: review+
Assignee | ||
Comment 4•6 years ago
|
||
Thanks for the prompt review! https://hg.mozilla.org/integration/mozilla-inbound/rev/c288fb7b831b
Comment 5•6 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/c288fb7b831b
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 8589787 [details] [diff] [review] Make NP_Shutdown async init aware (r2) Approval Request Comment [Feature/regressing bug #]: async plugin init [User impact if declined]: crashes if plugin is shutdown too quickly after starting up [Describe test coverage new/current, TreeHerder]: Locally, try, m-c [Risks and why]: Low, well understood problem with a straightforward patch [String/UUID change made/needed]: None
Attachment #8589787 -
Flags: approval-mozilla-aurora?
Comment on attachment 8589787 [details] [diff] [review] Make NP_Shutdown async init aware (r2) Approving for aurora - we definitely want to improve the async shutdown issues.
Attachment #8589787 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in
before you can comment on or make changes to this bug.
Description
•