Bug 1152395 - Ensure that NP_Shutdown respects async plugin init. r=jimm, a=lizzard